second commit レスポンシブ時のレイアウト崩れ修正

--- a/index.html
+++ b/index.html
@@ -61,16 +61,12 @@
         />
         <ul class="carousel-area-f">
           <li class="carousel-item">
-            <img
-              class="car-img"
-              src="./assets/img/catalog/slideshow/car1.png"
-              alt="car-image"
-            />
+            <div id="carousel-car-1" class="car-img"></div>
             <div class="car-info">
               <p class="maker-name">マツダ</p>
               <p class="car-name">ダミーテキスト</p>
               <div class="favorite-btn-container">
-                <p>お気に入りに追加</p>
+                <p>お気に入りに<br />追加</p>
                 <span id="favorite-btn-1" class=""></span>
               </div>
               <button class="show-detail-btn">
@@ -80,16 +76,12 @@
             </div>
           </li>
           <li class="carousel-item">
-            <img
-              class="car-img"
-              src="./assets/img/catalog/slideshow/car2.png"
-              alt="car-image"
-            />
+            <div id="carousel-car-2" class="car-img"></div>
             <div class="car-info">
               <p class="maker-name">マツダ</p>
               <p class="car-name">ダミーテキスト</p>
               <div class="favorite-btn-container">
-                <p>お気に入りに追加</p>
+                <p>お気に入りに<br />追加</p>
                 <span id="favorite-btn-2" class=""></span>
               </div>
               <button class="show-detail-btn">
@@ -99,16 +91,12 @@
             </div>
           </li>
           <li class="carousel-item">
-            <img
-              class="car-img"
-              src="./assets/img/catalog/slideshow/car3.png"
-              alt="car-image"
-            />
+            <div id="carousel-car-3" class="car-img"></div>
             <div class="car-info">
               <p class="maker-name">マツダ</p>
               <p class="car-name">ダミーテキスト</p>
               <div class="favorite-btn-container">
-                <p>お気に入りに追加</p>
+                <p>お気に入りに<br />追加</p>
                 <span id="favorite-btn-3" class=""></span>
               </div>
               <button class="show-detail-btn">
@@ -118,16 +106,12 @@
             </div>
           </li>
           <li class="carousel-item">
-            <img
-              class="car-img"
-              src="./assets/img/catalog/slideshow/car4.png"
-              alt="car-image"
-            />
+            <div id="carousel-car-4" class="car-img"></div>
             <div class="car-info">
               <p class="maker-name">マツダ</p>
               <p class="car-name">ダミーテキスト</p>
               <div class="favorite-btn-container">
-                <p>お気に入りに追加</p>
+                <p>お気に入りに<br />追加</p>
                 <span id="favorite-btn-4" class=""></span>
               </div>
               <button class="show-detail-btn">
@@ -137,16 +121,12 @@
             </div>
           </li>
           <li class="carousel-item">
-            <img
-              class="car-img"
-              src="./assets/img/catalog/slideshow/car5.png"
-              alt="car-image"
-            />
+            <div id="carousel-car-5" class="car-img"></div>
             <div class="car-info">
               <p class="maker-name">マツダ</p>
               <p class="car-name">ダミーテキスト</p>
               <div class="favorite-btn-container">
-                <p>お気に入りに追加</p>
+                <p>お気に入りに<br />追加</p>
                 <span id="favorite-btn-5" class=""></span>
               </div>
               <button class="show-detail-btn">
