--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="Description" content="Tasting the cars" />
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script type="text/javascript" src="./js/index.js" defer></script>
   </head>
   <body>
     <header>
@@ -392,6 +393,5 @@
       </div>
     </footer>
     <script type="text/javascript" src="./js/topSlider.js"></script>
-    <script type="text/javascript" src="./js/index.js"></script>
   </body>
 </html>
