--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@
     <main>
       <!-- top-slider -->
       <div class="top-slider">
-        <ul class="top-slider-area">
-          <li class="slider-item">ここにキャッチコピーが入る1</li>
-          <li class="slider-item">ここにキャッチコピーが入る2</li>
-          <li class="slider-item">ここにキャッチコピーが入る3</li>
-          <li class="slider-item">ここにキャッチコピーが入る4</li>
-          <li class="slider-item">ここにキャッチコピーが入る5</li>
-        </ul>
+        <ul class="top-slider-area"></ul>
         <div class="indicator-container"><ul id="indicator"></ul></div>
       </div>
       <!-- /top-slider -->
